# algeria-seloger-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
alembic/: README  env.py
alembic/versions/: fcffeff13bff_create_users_table_with_uuid_pk.py
app/: main.py  models.py
app/auth/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
app/core/: config.py  database.py  exceptions.py  logging.py  security.py
docs/adr/: 0000-template.md  0001-uuid-primary-keys.md  0002-s3-upload-presigned-url.md  0003-admin-role-many-to-many.md  0004-postgresql-tsvector-fulltext-search.md  0005-wilayas-database-table.md
tests/: conftest.py
tests/auth/: test_repository.py  test_router.py  test_service.py
